--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+:root{
+    --blue-1: #4C52AD;
+    --blue-2: #3C499E;
+    --shadow-dark: rgba(0,0,0,0.3);
+    --text-color: white;
+}
+body{
+    background-color: var(--blue-2);
+    color: var(--text-color);
+}
